# scoot-map-manager

./: .eslintignore  .eslintrc.js  .gitignore  README.md  fixTauriApiWindow.js  package.json  tailwind.config.js  tsconfig.json  versioninfo.json  vue.config.js
.github/workflows/: release-tauri-app.yml
public/: index.html
public/js/: magick.js
src/: App.vue  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  plugins.rs
src-tauri/src/plugins/: metadata.rs
src/components/app/Dashboard/: SDashboard.vue  SDashboardCard.vue
src/components/app/HomeDash/: SHomeDashDeveloper.vue  SHomeDashFeatured.vue  SHomeDashNews.vue  SHomeDashPatch.vue  SHomeDashTitle.vue
src/components/app/Map/: SMapCard.vue  SMapList.vue
src/components/app/Modals/: SModalsDelete.vue  SModalsDownload.vue
src/components/app/Nav/: SNavSidebar.vue  SNavTitlebar.vue  SSidebar.vue
src/components/app/Profile/: SProfileInfo.vue
src/components/shared/Button/: SButton.vue  SButtonDanger.vue  SButtonOutline.vue  SButtonText.vue
src/hooks/: useInstalledMaps.ts  useUploadMap.ts  useUserMaps.ts
src/plugins/: Metadata.ts
src/router/: index.ts
src/store/: index.ts
src/views/: Home.vue  Installed.vue  Login.vue  Maps.vue  Profile.vue  Register.vue  Setup.vue  Upload.vue
src/views/Installed/: Installed.vue  Root.vue  Uploaded.vue
web/: App.vue  main.ts
web/public/: template.html
web/router/: index.ts
web/src/api/: github.ts
web/src/views/: Home.vue
web/store/: index.ts
web/views/: Home.vue
(+13 files in other folders)
